--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp' version '1.7.0-1.0.6'
 }
 
 android {
@@ -54,6 +55,14 @@ android {
             arg("room.schemaLocation", "$projectDir/schemas")
         }
     }
+
+    applicationVariants.all {
+        kotlin.sourceSets {
+            getByName(name) {
+                kotlin.srcDir("build/generated/ksp/$name/kotlin")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -92,6 +101,11 @@ dependencies {
 
     // Material
     implementation "androidx.compose.material3:material3:1.0.1"
+
+    // Compose destinations
+    def destinations_version = "1.6.32-beta"
+    implementation "io.github.raamcosta.compose-destinations:core:$destinations_version"
+    ksp "io.github.raamcosta.compose-destinations:ksp:$destinations_version"
 }
 
 kapt {
