--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
     id 'com.google.devtools.ksp' version '1.7.0-1.0.6'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -139,6 +140,16 @@ dependencies {
 
     // Coil
     implementation "io.coil-kt:coil-compose:2.2.2"
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-bom:31.2.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+
+
+    // Glide
+    def glide_version = "4.12.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 }
 
 kapt {
