--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ local.properties
 /.idea/misc.xml
 /.idea/compiler.xml
 /.idea/inspectionProfiles/Project_Default.xml
+/.idea/deploymentTargetDropDown.xml
