--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,6 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
@@ -108,8 +107,9 @@ dependencies {
     // Functional programming
     implementation("io.arrow-kt:arrow-core:1.0.1")
 
-    // Material
+    // Material 3
     implementation "androidx.compose.material3:material3:1.0.1"
+    
 
     // Compose destinations
     def destinations_version = "1.6.32-beta"
@@ -139,7 +139,7 @@ dependencies {
     // Coil
     implementation "io.coil-kt:coil-compose:2.2.2"
 
-    // Firebase
+    // Firebase storage
     implementation 'com.google.firebase:firebase-bom:31.2.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
 
@@ -147,10 +147,6 @@ dependencies {
     def glide_version = "4.12.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     kapt "com.github.bumptech.glide:compiler:$glide_version"
-
-    // ML kit translate
-    implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
-    implementation 'com.google.firebase:firebase-ml-natural-language-translate-model:20.0.8'
 }
 
 kapt {
